--- a/StudentManagement/appsettings.json
+++ b/StudentManagement/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StudentManagement": "Server=.;Database=StudentManagement;Trusted_Connection=True;TrustServerCertificate=Yes;"
+  }
 }
