--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,16 @@ FodyWeavers.xsd
 /StudentManagement/Migrations/20240309070435_Update Student Model.cs
 /StudentManagement/Migrations/DataContextModelSnapshot.cs
 /StudentManagement/StudentManagement.csproj
+/StudentManagement/.vs/ProjectEvaluation/studentmanagement.metadata.v7.bin
+/StudentManagement/.vs/ProjectEvaluation/studentmanagement.projects.v7.bin
+/StudentManagement/.vs/StudentManagement/DesignTimeBuild/.dtbcache.v2
+/StudentManagement/.vs/StudentManagement/v17/.futdcache.v2
+/StudentManagement/.vs/StudentManagement/v17/.suo
+/StudentManagement/.vs/ProjectEvaluation/studentmanagement.metadata.v7.bin
+/StudentManagement/.vs/ProjectEvaluation/studentmanagement.projects.v7.bin
+/StudentManagement/.vs/StudentManagement/DesignTimeBuild/.dtbcache.v2
+/StudentManagement/.vs/StudentManagement/v17/.suo
+/StudentManagement/.vs/ProjectEvaluation/studentmanagement.metadata.v7.bin
+/StudentManagement/.vs/ProjectEvaluation/studentmanagement.projects.v7.bin
+/StudentManagement/.vs/StudentManagement/DesignTimeBuild/.dtbcache.v2
+/StudentManagement/.vs/StudentManagement/v17/.suo
