Update GitIgnore file

--- a/.gitignore
+++ b/.gitignore
@@ -403,3 +403,10 @@ FodyWeavers.xsd
 /StudentManagement/.vs/StudentManagement/DesignTimeBuild/.dtbcache.v2
 /StudentManagement/.vs/StudentManagement/v17/.suo
 *.suo
+*.bin
+*.v2
+*.csproj.user
+/StudentManagement/.vs/ProjectEvaluation/studentmanagement.metadata.v7.bin
+/StudentManagement/.vs/ProjectEvaluation/studentmanagement.projects.v7.bin
+/StudentManagement/.vs/StudentManagement/v17/.futdcache.v2
+/StudentManagement/StudentManagement.csproj.user
