--- a/.gitignore
+++ b/.gitignore
@@ -411,3 +411,15 @@ FodyWeavers.xsd
 /StudentManagement/Migrations/20240309070435_Update Student Model.Designer.cs
 /StudentManagement/Migrations/20240310072224_Update LastyrSchool to Department.cs
 /StudentManagement/Migrations/20240310072224_Update LastyrSchool to Department.Designer.cs
+/StudentManagement/obj/Debug/net7.0/StudentManagement.AssemblyInfo.cs
+/StudentManagement/obj/Debug/net7.0/StudentManagement.AssemblyInfoInputs.cache
+/StudentManagement/obj/Debug/net7.0/StudentManagement.assets.cache
+/StudentManagement/obj/Debug/net7.0/StudentManagement.RazorAssemblyInfo.cache
+/StudentManagement/obj/project.assets.json
+/StudentManagement/obj/project.nuget.cache
+/StudentManagement/obj/StudentManagement.csproj.nuget.dgspec.json
+/StudentManagement/obj/StudentManagement.csproj.nuget.g.props
+/StudentManagement/obj/project.assets.json
+/StudentManagement/obj/project.nuget.cache
+/StudentManagement/obj/StudentManagement.csproj.nuget.dgspec.json
+/StudentManagement/obj/StudentManagement.csproj.nuget.g.props
