bg image is add in index page

--- a/StudentManagement/appsettings.json
+++ b/StudentManagement/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StudentManagement": "Server=.;Database=StudentManagement;Trusted_Connection=True;TrustServerCertificate=Yes;"
+    "StudentManagement": "Server=DESKTOP-6S6F63N\\SQLEXPRESS;Database=StudentManagement;Trusted_Connection=True;TrustServerCertificate=Yes;"
   }
 }
