Update index page

--- a/StudentManagement/appsettings.json
+++ b/StudentManagement/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StudentManagement": "server=.;database=StudentManagement;Trusted_Connection=true"
+    "StudentManagement": "server=DESKTOP-6S6F63N\\SQLEXPRESS;database=StudentManagement;Trusted_Connection=true"
   }
 }
