--- a/StudentManagement/StudentManagement.csproj
+++ b/StudentManagement/StudentManagement.csproj
@@ -15,6 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Views\Role\Create.cshtml" />
+    <None Include="Views\Role\Index.cshtml" />
     <None Include="Views\Shared\Components\DataTable\Default.cshtml" />
     <None Include="wwwroot\Images\StudSitTopofBook.webp" />
   </ItemGroup>
