--- a/StudentManagement/appsettings.json
+++ b/StudentManagement/appsettings.json
@@ -7,6 +7,20 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StudentManagement": "server=DESKTOP-6S6F63N\\SQLEXPRESS;database=StudentManagement;Trusted_Connection=true"
+    "StudentManagement": "server=.;database=StudentManagement;Trusted_Connection=true"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "1097000050070-r3jh7tng110umlttcrm90a3ogojqj9qi.apps.googleusercontent.com",
+      "ClientSecret": "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"
+      // Optional: Add other configuration options specific to your provider
+    },
+    "Authentication": {
+      "GitHub": {
+        "ClientId": "3e9541bb578eaa5a7f9b",
+        "ClientSecret": "bd514d047dfcb7c0777733024d83a733034142f6"
+        // Optional: Add other configuration options specific to your provider
+      }
+    }
   }
 }
