Get Student Image and Store Image in Database

--- a/StudentManagement/StudentManagement.csproj
+++ b/StudentManagement/StudentManagement.csproj
@@ -39,6 +39,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\js\Registration\" />
+    <Folder Include="wwwroot\uploading\" />
   </ItemGroup>
 
 </Project>
